--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,36 @@
 annotated-types==0.5.0
 anyio==3.7.1
-asttokens
-backcall
-Bottleneck
 click==8.1.7
-comm
-contourpy
-cycler
-debugpy
-decorator
-fastapi==0.102.0
-fonttools==4.25.0
+contourpy==1.1.0
+cycler==0.11.0
+fastapi==0.103.1
+fonttools==4.42.1
 h11==0.14.0
 idna==3.4
 imbalanced-learn==0.11.0
 imblearn==0.0
-ipykernel
-ipython
-jedi
-Jinja2==3.1.2
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
 joblib==1.3.2
-jupyter_client
-jupyter_core
-kiwisolver
-MarkupSafe==2.1.3
-matplotlib
-matplotlib-inline
-mkl-fft==1.3.6
-mkl-random
-mkl-service==2.4.0
-munkres==1.1.4
-nest-asyncio
-numexpr
-numpy
-packaging
-pandas
-parso
-pexpect
-pickleshare
-Pillow==9.4.0
-platformdirs
-prompt-toolkit
-psutil
-ptyprocess
-pure-eval
+kiwisolver==1.4.5
+MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1685769302670/work
+matplotlib==3.7.2
+numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1691056269729/work
+packaging==23.1
+pandas==2.1.0
+Pillow==10.0.0
 pydantic==2.3.0
 pydantic_core==2.6.3
-Pygments
-pyparsing
-python-dateutil
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-multipart==0.0.6
-pytz
-pyzmq
-reportlab==4.0.4
+pytz==2023.3.post1
 scikit-learn==1.2.2
-scipy
-seaborn
-six
+scipy==1.11.2
+seaborn==0.12.2
+six==1.16.0
 sniffio==1.3.0
-stack-data
 starlette==0.27.0
 threadpoolctl==3.2.0
-tornado
-traitlets
 typing_extensions==4.7.1
-tzdata
+tzdata==2023.3
 uvicorn==0.23.2
-wcwidth
