--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,16 @@ h11==0.14.0
 idna==3.4
 imbalanced-learn==0.11.0
 imblearn==0.0
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
+Jinja2==3.1.2
 joblib==1.3.2
 kiwisolver==1.4.5
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1685769302670/work
+MarkupSafe==2.1.3
 matplotlib==3.7.2
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1691056269729/work
+numpy==1.25.2
 packaging==23.1
 pandas==2.1.0
 Pillow==10.0.0
+pip==23.2.1
 pydantic==2.3.0
 pydantic_core==2.6.3
 pyparsing==3.0.9
@@ -27,6 +28,7 @@ pytz==2023.3.post1
 scikit-learn==1.2.2
 scipy==1.11.2
 seaborn==0.12.2
+setuptools==68.1.2
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
@@ -34,3 +36,4 @@ threadpoolctl==3.2.0
 typing_extensions==4.7.1
 tzdata==2023.3
 uvicorn==0.23.2
+wheel==0.41.2
