--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 annotated-types==0.5.0
 anyio==3.7.1
 click==8.1.7
-contourpy==1.1.0
+contourpy
 cycler==0.11.0
 fastapi==0.103.1
 fonttools==4.42.1
