--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==8.1.7
 contourpy
 cycler==0.11.0
 fastapi==0.103.1
-fonttools==4.42.1
+fonttools
 h11==0.14.0
 idna==3.4
 imbalanced-learn==0.11.0
