--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ Jinja2==3.1.2
 joblib==1.3.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
-matplotlib==3.7.2
+matplotlib
 numpy==1.25.2
 packaging==23.1
 pandas==2.1.0
