--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ joblib==1.3.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib
-numpy==1.25.2
+numpy
 packaging==23.1
 pandas==2.1.0
 Pillow==10.0.0
