--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 python-multipart==0.0.6
 pytz==2023.3.post1
-scikit-learn==1.1.2
+scikit-learn
 scipy==1.11.2
 seaborn==0.12.2
 setuptools==68.1.2
