--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ python-dateutil==2.8.2
 python-multipart==0.0.6
 pytz==2023.3.post1
 scikit-learn
-scipy==1.11.2
+scipy
 seaborn==0.12.2
 setuptools==68.1.2
 six==1.16.0
