--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ pytz==2023.3.post1
 scikit-learn
 scipy
 seaborn==0.12.2
-setuptools==68.1.2
+setuptools
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
