--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,8 @@ setuptools
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
-threadpoolctl==3.2.0
-typing_extensions==4.7.1
-tzdata==2023.3
-uvicorn==0.23.2
-wheel==0.41.2
+threadpoolctl
+typing_extensions
+tzdata
+uvicorn
+wheel
